[project]
name = "topydo"
version = "0.15"
description = "A powerful todo.txt application for the console"
authors = [
    { name = "Bram Schoenmakers", email = "bram@topydo.org" }
]
dependencies = [
    "arrow>=0.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
topydo = "topydo.ui.UILoader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/topydo"]
